{
    "name": "ControlMap",
    "maps": [
        {
            "name": "gameplay",
            "id": "91029e4f-bc84-4b65-8731-b05cac3f60f3",
            "actions": [
                {
                    "name": "CameraLook",
                    "type": "Value",
                    "id": "e27c19d7-37be-493e-8073-0197f5fbab2b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LockMouse",
                    "type": "Button",
                    "id": "f9304449-188b-40f7-b699-a2216524a565",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerMove",
                    "type": "Value",
                    "id": "d4ebc9b5-2670-4b4a-827a-ca061ea1e7ca",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RunModifier",
                    "type": "Button",
                    "id": "729d9b62-c7f7-4a2d-a67c-1263e624216c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RunToggle",
                    "type": "Button",
                    "id": "73f14ec8-119f-40d3-b495-35918103faf3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CrawlModifier",
                    "type": "Button",
                    "id": "713eb9f2-91ac-4bbc-a4e4-64a681765dd5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CrawlToggle",
                    "type": "Button",
                    "id": "4e1be39a-6fbf-469a-9969-ed18f494b72d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4a8f3d2f-46b9-4f65-9df4-939e02a92684",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6c268517-9a09-4d79-a9bb-71f3feaebf36",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "d3e8e0f5-d098-49ed-955d-38a05441ea83",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "ScaleVector2(x=8)",
                    "groups": "",
                    "action": "CameraLook",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "9c7a196f-c26f-4697-9a22-2a79b9f3b150",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraLook",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "530a58f5-992c-4c81-af0d-7ee8de33db8a",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraLook",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "065c62b6-bc9c-4fc3-b542-c4f73bbf3a30",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LockMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "412161e8-3e1c-48ca-9c5f-b5c877c0935e",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "7883f529-3e65-4dfa-924d-2324e75e2c1f",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "86d0f013-c62a-4fd9-8880-63ed502690c4",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "1221964a-930d-48fa-b7b5-be4907db5262",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a6e59df1-4aa0-4f7f-aa62-605ea7e7c359",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a375c9a3-f3a0-4faf-bf91-42acc0dc3ec0",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "cbc0b170-f9bc-4fab-9e43-556f6d9e8e36",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RunModifier",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ffbc605-f0c0-4d2f-a40e-dcc4e83efc03",
                    "path": "<Keyboard>/capsLock",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RunToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "203fcef2-6971-4a1e-92d8-b87543bc0d83",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RunToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8d3e123b-1109-426c-a036-20ec1aa926e4",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CrawlModifier",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9b099303-c479-4817-9c5b-df271a23ec53",
                    "path": "<Keyboard>/leftAlt",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CrawlToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a01a130b-faa5-466d-bda0-3257b48fab9e",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CrawlToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}